--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@angular/cdk": "^5.0.0-rc0",
     "@angular/common": "^5.0.5",
     "@angular/compiler": "^5.0.5",
+    "@angular/compiler-cli": "^5.0.5",
     "@angular/core": "^5.0.5",
     "@angular/forms": "^5.0.5",
     "@angular/http": "^5.0.5",
     "@angular/material": "^5.0.0-rc0",
     "@angular/platform-browser": "^5.0.5",
     "@angular/platform-browser-dynamic": "^5.0.5",
+    "@angular/platform-server": "^5.0.5",
     "@angular/router": "^5.0.5",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
@@ -33,7 +35,6 @@
   },
   "devDependencies": {
     "@angular/cli": "1.5.5",
-    "@angular/compiler-cli": "^5.0.5",
     "@angular/language-service": "^5.0.5",
     "@types/jasmine": "~2.8.2",
     "@types/jasminewd2": "~2.0.2",
@@ -50,6 +51,6 @@
     "protractor": "~5.2.0",
     "ts-node": "~3.3.0",
     "tslint": "~5.8.0",
-    "typescript": "~2.6.2"
+    "typescript": "^2.4.2"
   }
 }
