--- a/package.json
+++ b/package.json
@@ -12,33 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.5",
-    "@angular/cdk": "^5.0.0-rc0",
-    "@angular/common": "^5.0.5",
-    "@angular/compiler": "^5.0.5",
-    "@angular/compiler-cli": "^5.0.5",
-    "@angular/core": "^5.0.5",
-    "@angular/forms": "^5.0.5",
-    "@angular/http": "^5.0.5",
-    "@angular/material": "^5.0.0-rc0",
-    "@angular/platform-browser": "^5.0.5",
-    "@angular/platform-browser-dynamic": "^5.0.5",
-    "@angular/platform-server": "^5.0.5",
-    "@angular/router": "^5.0.5",
+    "@angular/animations": "^5.1.0",
+    "@angular/cdk": "^5.0.0",
+    "@angular/common": "^5.1.0",
+    "@angular/compiler": "^5.1.0",
+    "@angular/compiler-cli": "^5.1.0",
+    "@angular/core": "^5.1.0",
+    "@angular/forms": "^5.1.0",
+    "@angular/http": "^5.1.0",
+    "@angular/material": "^5.0.0",
+    "@angular/platform-browser": "^5.1.0",
+    "@angular/platform-browser-dynamic": "^5.1.0",
+    "@angular/platform-server": "^5.1.0",
+    "@angular/router": "^5.1.0",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "handlebars": "^4.0.11",
     "normalize.css": "^7.0.0",
-    "rxjs": "^5.5.3",
+    "rxjs": "^5.5.5",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.5.5",
-    "@angular/language-service": "^5.0.5",
+    "@angular/language-service": "^5.1.0",
     "@types/jasmine": "~2.8.2",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^8.0.54",
+    "@types/node": "^8.0.57",
     "codelyzer": "~4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -48,9 +48,9 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.2.0",
+    "protractor": "^5.2.1",
     "ts-node": "~3.3.0",
     "tslint": "~5.8.0",
-    "typescript": "^2.4.2"
+    "typescript": "^2.5.3"
   }
 }
