--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^8.5.7",
     "codelyzer": "^4.0.2",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
