--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.3",
+    "@angular/cli": "1.6.4",
     "@angular/language-service": "^5.1.3",
     "@types/jasmine": "^2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^8.5.7",
+    "@types/node": "^9.3.0",
     "codelyzer": "^4.0.2",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "jasmine-core": "~2.8.0",
+    "jasmine-core": "~2.9.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
@@ -54,7 +54,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.2.2",
     "ts-node": "~4.1.0",
-    "tslint": "~5.8.0",
-    "typescript": "2.5.3"
+    "tslint": "~5.9.1",
+    "typescript": "^2.5.3"
   }
 }
