--- a/package.json
+++ b/package.json
@@ -12,49 +12,54 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.3",
-    "@angular/cdk": "^5.0.3",
-    "@angular/common": "^5.1.3",
-    "@angular/compiler": "^5.1.3",
-    "@angular/compiler-cli": "^5.1.3",
-    "@angular/core": "^5.1.3",
-    "@angular/forms": "^5.1.3",
-    "@angular/http": "^5.1.3",
-    "@angular/material": "^5.0.3",
-    "@angular/platform-browser": "^5.1.3",
-    "@angular/platform-browser-dynamic": "^5.1.3",
-    "@angular/platform-server": "^5.1.3",
-    "@angular/router": "^5.1.3",
+    "@angular/animations": "^5.2.4",
+    "@angular/cdk": "^5.2.0",
+    "@angular/common": "^5.2.4",
+    "@angular/compiler": "^5.2.4",
+    "@angular/compiler-cli": "^5.2.4",
+    "@angular/core": "^5.2.4",
+    "@angular/forms": "^5.2.4",
+    "@angular/http": "^5.2.4",
+    "@angular/material": "^5.2.0",
+    "@angular/platform-browser": "^5.2.4",
+    "@angular/platform-browser-dynamic": "^5.2.4",
+    "@angular/platform-server": "^5.2.4",
+    "@angular/router": "^5.2.4",
+    "@ngrx/effects": "^5.0.1",
+    "@ngrx/router-store": "^5.0.1",
+    "@ngrx/store": "^5.0.0",
+    "@ngrx/store-devtools": "^5.0.1",
     "core-js": "^2.5.3",
     "hammerjs": "^2.0.8",
     "handlebars": "^4.0.11",
     "normalize.css": "^7.0.0",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.4",
-    "@angular/language-service": "^5.1.3",
-    "@types/jasmine": "^2.8.3",
-    "@types/jasminewd2": "~2.0.2",
+    "@angular/cli": "1.6.8",
+    "@angular/language-service": "^5.2.4",
+    "@types/jasmine": "^2.8.6",
+    "@types/jasminewd2": "~2.0.3",
     "@types/node": "^9.3.0",
-    "codelyzer": "^4.0.2",
+    "codelyzer": "^4.1.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "jasmine-core": "~2.9.0",
+    "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.3.3",
+    "karma-coverage-istanbul-reporter": "^1.4.1",
     "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.2.2",
+    "ngrx-store-freeze": "^0.2.1",
+    "protractor": "^5.3.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "^2.5.3"
+    "typescript": "2.5.3"
   }
 }
