--- a/package.json
+++ b/package.json
@@ -12,36 +12,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.4",
-    "@angular/cdk": "^5.2.0",
-    "@angular/common": "^5.2.4",
-    "@angular/compiler": "^5.2.4",
-    "@angular/compiler-cli": "^5.2.4",
-    "@angular/core": "^5.2.4",
-    "@angular/forms": "^5.2.4",
-    "@angular/http": "^5.2.4",
-    "@angular/material": "^5.2.0",
-    "@angular/platform-browser": "^5.2.4",
-    "@angular/platform-browser-dynamic": "^5.2.4",
-    "@angular/platform-server": "^5.2.4",
-    "@angular/router": "^5.2.4",
-    "@ngrx/effects": "^5.0.1",
+    "@angular/animations": "^5.2.5",
+    "@angular/cdk": "^5.2.1",
+    "@angular/common": "^5.2.5",
+    "@angular/compiler": "^5.2.5",
+    "@angular/compiler-cli": "^5.2.5",
+    "@angular/core": "^5.2.5",
+    "@angular/forms": "^5.2.5",
+    "@angular/http": "^5.2.5",
+    "@angular/material": "^5.2.1",
+    "@angular/platform-browser": "^5.2.5",
+    "@angular/platform-browser-dynamic": "^5.2.5",
+    "@angular/platform-server": "^5.2.5",
+    "@angular/router": "^5.2.5",
+    "@ngrx/effects": "^5.1.0",
     "@ngrx/router-store": "^5.0.1",
-    "@ngrx/store": "^5.0.0",
-    "@ngrx/store-devtools": "^5.0.1",
+    "@ngrx/store": "^5.1.0",
+    "@ngrx/store-devtools": "^5.1.0",
+    "angularfire2": "^5.0.0-rc.6",
     "core-js": "^2.5.3",
+    "firebase": "^4.10.0",
     "hammerjs": "^2.0.8",
     "handlebars": "^4.0.11",
-    "normalize.css": "^7.0.0",
+    "normalize.css": "^8.0.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
     "@angular/cli": "1.6.8",
-    "@angular/language-service": "^5.2.4",
+    "@angular/language-service": "^5.2.5",
     "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^9.3.0",
+    "@types/node": "^9.4.6",
     "codelyzer": "^4.1.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
