--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "firebase": "^4.10.0",
     "hammerjs": "^2.0.8",
     "handlebars": "^4.0.11",
+    "ngrx-store-localstorage": "^5.0.0",
     "normalize.css": "^8.0.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.20"
