--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.5",
-    "@angular/cdk": "^5.2.1",
-    "@angular/common": "^5.2.5",
-    "@angular/compiler": "^5.2.5",
-    "@angular/compiler-cli": "^5.2.5",
-    "@angular/core": "^5.2.5",
-    "@angular/forms": "^5.2.5",
-    "@angular/http": "^5.2.5",
-    "@angular/material": "^5.2.1",
-    "@angular/platform-browser": "^5.2.5",
-    "@angular/platform-browser-dynamic": "^5.2.5",
-    "@angular/platform-server": "^5.2.5",
-    "@angular/router": "^5.2.5",
+    "@angular/animations": "^5.2.6",
+    "@angular/cdk": "^5.2.2",
+    "@angular/common": "^5.2.6",
+    "@angular/compiler": "^5.2.6",
+    "@angular/compiler-cli": "^5.2.6",
+    "@angular/core": "^5.2.6",
+    "@angular/forms": "^5.2.6",
+    "@angular/http": "^5.2.6",
+    "@angular/material": "^5.2.2",
+    "@angular/platform-browser": "^5.2.6",
+    "@angular/platform-browser-dynamic": "^5.2.6",
+    "@angular/platform-server": "^5.2.6",
+    "@angular/router": "^5.2.6",
     "@ngrx/effects": "^5.1.0",
     "@ngrx/router-store": "^5.0.1",
     "@ngrx/store": "^5.1.0",
     "@ngrx/store-devtools": "^5.1.0",
     "angularfire2": "^5.0.0-rc.6",
     "core-js": "^2.5.3",
-    "firebase": "^4.10.0",
+    "firebase": "^4.10.1",
     "hammerjs": "^2.0.8",
     "handlebars": "^4.0.11",
     "ngrx-store-localstorage": "^5.0.0",
@@ -40,18 +40,18 @@
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.8",
-    "@angular/language-service": "^5.2.5",
+    "@angular/cli": "1.7.2",
+    "@angular/language-service": "^5.2.6",
     "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^9.4.6",
     "codelyzer": "^4.1.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^6.0.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "jasmine-core": "~2.99.1",
+    "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
@@ -61,7 +61,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "ngrx-store-freeze": "^0.2.1",
     "protractor": "^5.3.0",
-    "ts-node": "~4.1.0",
+    "ts-node": "~5.0.0",
     "tslint": "~5.9.1",
     "typescript": "2.5.3"
   }
